fix text align topnav kabar

--- a/src/component/Topbar/Topbar.css
+++ b/src/component/Topbar/Topbar.css
@@ -405,7 +405,7 @@
     margin: 10px auto;
 }
 
-.kabar-mega-deskripsi {
+.sub-menu-kementrian .kabar-mega-deskripsi {
     height: fit-content;
     font-weight: 600px;
     width: 90%;
@@ -676,7 +676,7 @@
         margin: 10px auto;
     }
     
-    .kabar-mega-deskripsi {
+    .sub-menu-kementrian .kabar-mega-deskripsi {
         height: fit-content;
         font-weight: 600;
         width: 90%;
